DB rework and init